# web-cards

./: .gitignore  README.md  meson.build
packaging/: Dockerfile  build-docker.sh
src/cards/: Enfer.cpp  Enfer.hpp  Exception.cpp  Exception.hpp  StandardCards.cpp  StandardCards.hpp  Uno.cpp  Uno.hpp  meson.build
src/server/: BasicLobby.cpp  BasicLobby.hpp  FileRepository.cpp  FileRepository.hpp  GlobalLobby.cpp  GlobalLobby.hpp  Helper.cpp  Helper.hpp  Lobby.cpp  Lobby.hpp  LobbyEnfer.cpp  LobbyEnfer.hpp  LobbyUno.cpp  LobbyUno.hpp  Server.cpp  Server.hpp  SessionsManager.cpp  SessionsManager.hpp  UserRepository.cpp  UserRepository.hpp  WebsocketSession.cpp  WebsocketSession.hpp  main.cpp  meson.build
src/web/: files.lst  index-guest.html  index-user.html  index.html  login.html
src/web/game/: enfer-schema.html  enfer.html  uno-schema.html  uno.html
src/web/images/: readme.txt
test/cards/: meson.build  testEnfer.cpp  testStandardCards.cpp  testUno.cpp  utilsStandardCards.hpp
test/catch/: meson.build
test/integration/: ws-invalid-path.py
test/server/: Utils.hpp  meson.build  sample.cpp  testGlobalLobby.cpp  testHelper.cpp  testLobbyEnfer.cpp
